# MotionControlFirmware_TI_C2000

./: .gitignore  README.md
MotionControl_Firmware_CPU1/: .ccsproject  .cproject  .project  MotionControl_Firmware_CPU1.cfg  MotionControl_Firmware_CPU1_TargetConfiguration.ccxml
MotionControl_Firmware_CPU1/.config/xconfig_MotionControl_Firmware_CPU1/: .buildtime  .xdcenv.mak  compiler.opt  compiler.opt.defs  config.bld  custom.mak  package.bld  package.mak  package.xdc
MotionControl_Firmware_CPU1/.launches/: MotionControl_Firmware_CPU1.launch
MotionControl_Firmware_CPU1/Debug/: MotionControl_Firmware_CPU1.map  MotionControl_Firmware_CPU1.out  MotionControl_Firmware_CPU1_linkInfo.xml  ccsObjs.opt  makefile  sources.mk  subdir_rules.mk  subdir_vars.mk
MotionControl_Firmware_CPU1/Debug/LinkerCmd/: subdir_vars.mk
MotionControl_Firmware_CPU1/Debug/configPkg/: .xdcenv.mak  compiler.opt  compiler.opt.defs  custom.mak  package.bld  package.mak
MotionControl_Firmware_CPU1/Drivers/EncoderDriver/: EncoderDriver.c  EncoderDriver.h
MotionControl_Firmware_CPU1/Drivers/GpioDriver/: GpioDriver.c  GpioDriver.h
MotionControl_Firmware_CPU1/LinkerCmd/: 2837xD_FLASH_lnk_cpu1.cmd  2837xD_FLASH_lnk_cpu1.cmd_  2837xD_RAM_lnk_cpu1.cmd_
MotionControl_Firmware_CPU1/ObjectDictionary/: ObdNumberOfEntries.h  ObjectDictionary.h  ObjectDictionaryEntry.h  ObjectDictionaryEntryBase.h  ObjectDictionaryInit.cpp
MotionControl_Firmware_CPU1/Source/inc/: SysDef.h  (+27 more)
MotionControl_Firmware_CPU1/src/: makefile.libs
mcs_interface/: CMakeLists.txt  SweepSineData.txt  octave-workspace  package.xml
mcs_interface/msg/: CiA_NmtMessage.msg  CiA_PdoMessage.msg  CiA_SdoMessage.msg
mcs_interface/src/: mcs_calibrate.cpp  mcs_clsw.cpp  mcs_debug_print.cpp  mcs_example.cpp  mcs_interface.cpp  mcs_obd_read.cpp
obd_code_generation/: CMakeLists.txt  package.xml
obd_code_generation/generated_files/: ObdNumberOfEntries.h  ObjectDictionaryInit.cpp
obd_code_generation/include/: obd_code_generation.h
obd_code_generation/src/: ObjectDictionaryInit.cpp  input.txt  obd_code_generation.cpp  template.txt
(+79 files in other folders)
